2006-08-31  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/manager/depgraph.py:
	Whoops, we were letting too many nodes through in whatShouldBeStarted.

2006-08-31  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* scripts/wait-for-http-headers:
	Forgot to add this script. Whoops.

2006-08-31  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/test/integration/test_qa.py:
	Add integration test of videotest with overlay.
	* scripts/check-file-type:
	Wait for file to be non-empty before checking file type.

2006-08-31  Michael Smith  <msmith@fluendo.com>

	* flumotion/manager/base.py:
	  Fix up formatting of remote call logging.

2006-08-31  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/test/integration/test_qa.py:
	Add test for default wizard audiotest with disker.

2006-08-31  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/test/integration/test_qa.py:
	Add test to check whether token bouncing works.
	* scripts/check-token-for-http:
	Add test that does 2 requests, one with a correct token
	and one with an incorrect token.

2006-08-31  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/test/integration/common.py:
	configure.bindir is top_src_dir/bin.

2006-08-31  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/bouncers/tokentest.py:
	Fix use of wrong implements method and bad property
	requesterName.

2006-08-31  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/bouncers/tokentest.xml:
	Add bundle definitions to test token bouncer.

2006-08-31  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/bouncers/tokentest.py:
	* flumotion/component/bouncers/tokentest.xml:
	Fix wingo's b0rked commit.

2006-08-31  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/test/integration/test_qa.py:
	Check http-video streams and check disker outputs ogg files.
	* scripts/check-file-type: